--- a/google/cloud/bigtable/doc/bigtable-main.dox
+++ b/google/cloud/bigtable/doc/bigtable-main.dox
@@ -114,9 +114,9 @@ guide for more details.
 /**
 @page bigtable-universe-domain-example Override the default Universe Domain
 
-In some cases, you may need to override the default universe domain used by the client
-library. Use the [AddUniverseDomainOption](@ref google::cloud::AddUniverseDomainOption)
-when initializing the client library to change this default.
+In some cases, you may need to override the default universe domain used by the
+client library. Use the `google::cloud::AddUniverseDomainOption` when
+initializing the client library to change this default.
 
 @snippet client_samples.cc table-set-universe-domain
 
