--- a/google/cloud/spanner/doc/spanner-main.dox
+++ b/google/cloud/spanner/doc/spanner-main.dox
@@ -89,9 +89,9 @@ Follow these links to find examples for other `*Client` classes:
 /**
 @page spanner-universe-domain-example Override the default universe domain
 
-In some cases, you may need to override the default universe domain used by the client
-library. Use the [AddUniverseDomainOption](@ref google::cloud::AddUniverseDomainOption)
-when initializing the client library to change this default.
+In some cases, you may need to override the default universe domain used by the
+client library. Use the `google::cloud::AddUniverseDomainOption` when
+initializing the client library to change this default.
 
 @snippet client_samples.cc set-client-universe-domain
 
