--- a/google/cloud/storage/doc/storage-main.dox
+++ b/google/cloud/storage/doc/storage-main.dox
@@ -134,9 +134,9 @@ more conservative approach:
 /**
 @page storage-universe-domain-example Override the Default Universe Domain
 
-In some cases, you may need to override the default universe domain used by the client
-library. Use the [AddUniverseDomainOption](@ref google::cloud::AddUniverseDomainOption)
-when initializing the client library to change this default.
+In some cases, you may need to override the default universe domain used by the
+client library. Use the `google::cloud::AddUniverseDomainOption` when
+initializing the client library to change this default.
 
 @snippet storage_client_initialization_samples.cc set-client-universe-domain
 */
