--- a/google/cloud/billing/doc/main.dox
+++ b/google/cloud/billing/doc/main.dox
@@ -14,7 +14,7 @@ While this library is **GA**, please note Google Cloud C++ client libraries do *
 
 The following shows the code that you'll run in the
 `google/cloud/billing/quickstart/` directory,
-which should give you a taste of the Cloud Billing Budget API C++ client library API.
+which should give you a taste of the Cloud Billing C++ client library.
 
 @snippet quickstart.cc all
 
